<resources>
    <string name="app_name">Dinie Recettes</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="incorrect_email_password">Incorrect Email or Password</string>
    <string name="login_success">Login Success.</string>
    <string name="signup_success">User Registered Successfully.</string>
    <string name="email_not_varified">Your Email Is Not Varifield.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reset_pass_info">Enter the email address associated with your account, and we’ll email you a link to reset your password.</string>
    <string name="reset_pass_txt">Reset Password</string>
    <string name="forgot_pass_txt">Forgot Password?</string>
    <string name="login_btn_txt">Login</string>
    <string name="signup_btn_txt">Sign Up</string>
    <string name="no_account_txt">Don\'t Have An Account Yet?</string>
    <string name="having_account_txt">Already have An Account?</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="email_not_found">Opps! No account found with this email.</string>
    <string name="email_reset_link_sent">A link to reset your password has been sent.</string>
    <string name="signOut">Signed Out.</string>
    <string name="update_name_btn_txt">Update Name</string>
    <string name="hint_edit_name">Change Name</string>
    <string name="hint_edit_password">Change Password</string>
    <string name="change_txt">Change</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="continue_guest">Continue as Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_txt">Welcome</string>
    <string name="tell_us_txt">Tell us your name</string>
    <string name="next_btn_txt">Next</string>
    <string name="tell_us_email_contact_txt"><![CDATA[And your email & contact?]]></string>
    <string name="hint_contact_eg"><![CDATA[(Optional) \"5149012345\"]]></string>
    <string name="hint_email_eg"><![CDATA[\"dinie123@gmail.com\"]]></string>
    <string name="ask_photo_txt">Would you like to select a profile?</string>
    <string name="skip_btn_txt">Skip</string>
    <string name="create_password_txt">Create a password</string>
    <string name="hint_password_eg">Dinie@123</string>
    <string name="signup_hint_password_eg">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="enter_otp_txt">Enter OTP</string>
    <string name="otp_on_email_txt">An OTP has been sent on your email</string>
    <string name="otp_blank">------</string>
    <string name="validate_otp_btn">Validate OTP</string>
    <string name="resend_otp_txt"><![CDATA[Resend OTP (30)]]></string>
    <string name="otp_count">(30)</string>
    <string name="password_desc_txt">Your password must include a symbol, number, atleaset one uppercase, one lowercase and be 8 or more charactes long.</string>
    <string name="tell_us_email_txt">Tell us your email</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_password_txt">Reset Password</string>
    <string name="required_field_missing"><![CDATA[Required fields are missing!]]></string>
    <string name="invalid_email"><![CDATA[Please enter valid email!]]></string>
    <string name="invalid_password"><![CDATA[Please enter valid password!]]></string>
    <string name="invalid_confirm_password"><![CDATA[Confirm password does not match with password!]]></string>
    <string name="invalid_user_name"><![CDATA[Please enter valid name!]]></string>
    <string name="invalid_user_contact"><![CDATA[Please enter valid contact number!]]></string>
    <string name="email_exist"><![CDATA[Email already exists.\nPlease try with another email.]]></string>
    <string name="some_wrong">Something went wrong!!\nPlease try again.</string>
    <string name="hello_guest">Welcome Guest</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ur_recipe">Your Recipes</string>
    <string name="ur_cb">Your Cookbook</string>
    <string name="offline_recipe">Offline Recipes</string>
    <string name="history">History</string>
    <string name="delete_acc">Delete Account</string>
    <string name="log_out">Logout</string>
    <string name="name_recioe">Please name your recipe</string>
    <string name="hint_recipe_name">Recipe Name</string>
    <string name="add_photo_txt">add photo\n(optional)</string>
    <string name="enter_details_txt">Please enter following details</string>
    <string name="add_category_txt">Category</string>
    <string name="add_cuisine_txt">Cuisine</string>
    <string name="add_cooktime_txt">Cook time</string>
    <string name="enter_value_hint">Enter Value</string>
    <string name="add_serving_txt">Number of servings</string>
    <string name="add_calories_txt">Calories (Optional)</string>
    <string name="cal">Cal</string>
    <string name="person">Person</string>
    <string name="minutes">Minutes</string>
    <string name="video_link_txt">Video instruction link (Optional)</string>
    <string name="link_hint">Paste Link Here (Optional)</string>
    <string name="enter_valid_otp">Please enter valid OTP!!</string>
    <string name="invalid_entered_otp">Incorrect OTP!</string>
    <string name="add_ingredients_name_txt">Please add ingredients to your recipe</string>
    <string name="hint_search_box">\"Cream\"</string>
    <string name="selected_ingredients_txt">Selected Ingredients:</string>
    <string name="selecct_one_ingredient">Please select at least one ingredient!</string>
    <string name="check_internet">Internet Disconnected!!</string>
    <string name="add_quantity_name_txt">Please add quantity of your ingredients to your recipe</string>
    <string name="quantity_note_txt">Note: add quantity with quantity type\nE.g. 2 g, 150 ml</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="add_instruction_name_txt">Please add step-by-step cooking instruction for your recipe</string>
    <string name="add_step">Add Step</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="step">Step</string>
    <string name="tab_explore">Explore</string>
    <string name="tab_cuisine">Cuisine</string>
    <string name="tab_category">Category</string>
    <string name="c_name">Cuisine Name</string>
    <string name="fetch_recipes">Finding Recipes</string>
    <string name="quantity_type_hint">Type</string>
    <string name="catrgoty_name">Category Name</string>
    <string name="username_txt">Username</string>
    <string name="serving_txt">Servings</string>
    <string name="link_txt">Instructions</string>
    <string name="rd_like_it_txt">Did you like this recipe?</string>
    <string name="rd_rate_it_txt">Rate this recipe</string>
    <string name="fetch_your_recipe">Your recipe is on the way</string>
    <string name="link_not_valid">Invalid or Bad URL!!</string>
    <string name="could_not_validate">Could not validate URL!\nPlease try again.</string>
    <string name="skip_instruction_note_txt">Note: Cooking instruction steps are optional if video instruction link is provided.</string>
    <string name="search_txt">Search</string>
    <string name="tab_search_name">By Name</string>
    <string name="tab_search_ingredients">By Ingredients</string>
    <string name="search_filter_txt">Filter your search:</string>
    <string name="search_recipes_txt">Search Recipes</string>
    <string name="no_recipe_found">No Recipes Available!!</string>
    <string name="no_added_recipe">You have not added any recipe!!\nPlease add recipe now.</string>
    <string name="fetch_your_cb">Fetching Your Cookbooks</string>
    <string name="cb_name">Your Cookbook</string>
    <string name="cb_num_of_recipes">Number of recipes:</string>
    <string name="name_your_cb">Please name your cookbook</string>
    <string name="hint_cb_box">\"My Breakfast\"</string>
    <string name="create_cb_txt">Create Cookbook</string>
    <string name="thanks_for_rating">Thanks for rating this recipe!</string>
    <string name="hit_plus_icon">Please hit on \"+\" icon to create a cookbook!</string>
    <string name="norecipe_in_cookbook">You have not added any recipes in this cookbook!</string>
    <string name="oops">Oops!</string>
    <string name="login_first">You need to login first!</string>
    <string name="your_cb">Your Cookbook</string>
    <string name="create_new_cb_txt">Create new cookbook</string>
    <string name="hint_cb_name">Cookbook Name</string>
    <string name="no_cb">You have not created any cookbook</string>
    <string name="adding_to_cb">Adding recipe to your cookbook</string>
    <string name="swipe_cb_new"><![CDATA[Swipe to create new cookbook >>]]></string>
    <string name="swipe_go_back"><![CDATA[<< Swipe to go back]]></string>
    <string name="recipe_download_success">Recipe downloaded successfully.</string>
    <string name="recipe_exist_download">Recipe already exists in your download list.</string>
    <string name="no_download_recipes">You have not downloaded any recipes</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="offline_no_longer_available">This recipe will no longer be available in your offline recipes</string>
    <string name="continue_txt">Continue</string>
    <string name="cancel_txt">Cancel</string>
    <string name="sample_text">Type Reason Here</string>
    <string name="no_longer_available">This recipe will no longer be available</string>
    <string name="delete_recipe_success">Recipe deleted successfully.</string>
    <string name="no_hitory_recipes">No History Available</string>
    <string name="no_premium_feature">You will no longer be able to access premium feature of the application!</string>
    <string name="search_rating_txt">Search by rating</string>
    <string name="search_cooktime_txt">Cooktime</string>
    <string name="search_cuisine_txt">Cuisine</string>
    <string name="search_category_txt">Category</string>
    <string name="hint_contact">Contact (Optional)</string>
    <string name="update_profile_txt">Update Profile</string>
    <string name="edit_photo_txt">Edit photo\n(optional)</string>
    <string name="er_ingredients_name_txt">Would you like to edit your ingredients?</string>
    <string name="update_recipe">Update Recipe</string>

</resources>
