<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_first"
        android:textColor="@color/darkerGrey"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGrey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guest_login_first_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/login_btn_txt"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="2dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>