<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabTextColor="@android:color/white"
        app:tabIndicatorColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:text="@string/tab_explore"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <com.google.android.material.tabs.TabItem
            android:text="@string/tab_cuisine"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:text="@string/tab_category"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </com.google.android.material.tabs.TabLayout>


    <fragment
        android:id="@+id/home_child_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:navGraph="@navigation/home_child_nav_graph" />


</androidx.constraintlayout.widget.ConstraintLayout>