<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/delete_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_recipe"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/drd_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_text"
        android:textColor="@color/darkerGrey"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <ProgressBar
        android:id="@+id/drd_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"
        android:padding="16dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGrey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/drd_continue_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/continue_txt"
            android:textColor="@android:color/black"
            android:layout_marginEnd="8dp"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="2dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/drd_cancel_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/cancel_txt"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="2dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>