<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    tools:context=".EditRecipe1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/er_error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorError"
            android:visibility="gone">
            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/required_field_missing"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/er_hide_error_btn"/>
            <ImageButton
                android:id="@+id/er_hide_error_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clear_text"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/er_error_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/er_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18sp"
                android:text="@string/name_recioe"
                android:textColor="@color/colorAccent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/er_card_view"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/er_name_txt">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:cardCornerRadius="28dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@android:color/white">
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/camera_accent"
                        android:id="@+id/er_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>
                </com.google.android.material.card.MaterialCardView>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/er_name_layout"
                style="@style/AccentTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_recipe_name"
                app:layout_constraintStart_toEndOf="@id/er_card_view"
                app:layout_constraintTop_toBottomOf="@id/er_name_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/er_name_edittxt"
                    style="@style/AccentTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/colorLightGrey" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/edit_photo_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/er_card_view"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="14sp"
                android:text="@string/edit_photo_txt"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/er_enter_details_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_photo_txt"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:text="@string/enter_details_txt"
                android:textColor="@color/colorAccent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/er_category_selection_layout"
                style="@style/TextInputAutoCompleteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_category_txt"
                app:layout_constraintTop_toBottomOf="@id/er_enter_details_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp">

                <AutoCompleteTextView
                    style="@style/AccentTextInputEditTextStyle"
                    android:id="@+id/er_category_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/er_cuisine_selection_layout"
                style="@style/TextInputAutoCompleteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_cuisine_txt"
                app:layout_constraintTop_toBottomOf="@id/er_category_selection_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp">

                <AutoCompleteTextView
                    style="@style/AccentTextInputEditTextStyle"
                    android:id="@+id/er_cuisine_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/er_cook_time_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AccentTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/er_cuisine_selection_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:hintEnabled="true"
                android:hint="@string/add_cooktime_txt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/er_cook_time_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/AccentTextInputEditTextStyle"
                    android:textSize="18sp"
                    android:maxLength="3"
                    android:paddingEnd="60dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/er_cook_time_input_layout"
                app:layout_constraintTop_toTopOf="@id/er_cook_time_input_layout"
                app:layout_constraintBottom_toBottomOf="@id/er_cook_time_input_layout"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/minutes"
                android:paddingTop="6dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/er_serving_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AccentTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/er_cook_time_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:hintEnabled="true"
                android:hint="@string/add_serving_txt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/er_serving_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/AccentTextInputEditTextStyle"
                    android:textSize="18sp"
                    android:maxLength="3"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/er_serving_input_layout"
                app:layout_constraintTop_toTopOf="@id/er_serving_input_layout"
                app:layout_constraintBottom_toBottomOf="@id/er_serving_input_layout"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/person"
                android:paddingTop="6dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/er_calories_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AccentTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/er_serving_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:hintEnabled="true"
                android:hint="@string/add_calories_txt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/er_calories_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/AccentTextInputEditTextStyle"
                    android:textSize="18sp"
                    android:maxLength="4"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/er_calories_input_layout"
                app:layout_constraintTop_toTopOf="@id/er_calories_input_layout"
                app:layout_constraintBottom_toBottomOf="@id/er_calories_input_layout"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/cal"
                android:paddingTop="6dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/er_video_link_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AccentTextInputLayoutStyle"
                app:layout_constraintTop_toBottomOf="@id/er_calories_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:hintEnabled="true"
                android:hint="@string/video_link_txt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/er_video_link_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/AccentTextInputEditTextStyle"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/er_progress1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:indeterminateTint="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/er_video_link_input_layout"
                android:layout_marginTop="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/er1_next_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:textSize="20sp"
                app:cornerRadius="30dp"
                android:text="@string/next_btn_txt"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/er_progress1"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="2dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>